fix: center align cards on tablet and mobile

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -11,3 +11,11 @@
   grid-template-columns: repeat(auto-fit, 282px);
   grid-gap: 20px 17px;
 }
+
+@media screen and (max-width: 999px) {
+  .cards__list {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+}
